force-app/main/default/objects/Contact/fields/Area_de_Negocio__c.field-meta.xml
<CustomField>
    <fullName>Area_de_Negocio__c</fullName>
    <inlineHelpText>Favor adicionar o nome da sua Unidade de Negócio, caso seja um contato para a mesma.</inlineHelpText>
    <label>Area de Negocio</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agência</fullName>
            </value>
            <value>
                <fullName>Brasco</fullName>
            </value>
            <value>
                <fullName>Estaleiro</fullName>
            </value>
            <value>
                <fullName>Logística - Plataforma NE</fullName>
            </value>
            <value>
                <fullName>Logística - Plataforma SE</fullName>
            </value>
            <value>
                <fullName>Tecon Rio Grande</fullName>
            </value>
            <value>
                <fullName>Tecon Salvador</fullName>
            </value>
            <value>
                <fullName>Rebocadores</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>