force-app/main/default/objects/Contact/fields/Area_Funcional__c.field-meta.xml
<CustomField>
    <fullName>Area_Funcional__c</fullName>
    <label>Área Funcional</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrativo / Financeiro</fullName>
            </value>
            <value>
                <fullName>Comercial / Vendas</fullName>
            </value>
            <value>
                <fullName>Comércio Exterior</fullName>
            </value>
            <value>
                <fullName>Compras / Suprimentos</fullName>
            </value>
            <value>
                <fullName>Engenharia</fullName>
            </value>
            <value>
                <fullName>Fiscalização / Auditoria</fullName>
            </value>
            <value>
                <fullName>Jurídico</fullName>
            </value>
            <value>
                <fullName>Logística</fullName>
            </value>
            <value>
                <fullName>Manutenção</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Novos Negócios</fullName>
            </value>
            <value>
                <fullName>Operações</fullName>
            </value>
            <value>
                <fullName>Planejamento / Estratégico</fullName>
            </value>
            <value>
                <fullName>Projetos</fullName>
            </value>
            <value>
                <fullName>Recursos Humanos</fullName>
            </value>
            <value>
                <fullName>Relacionamento Cliente / Pós-Venda</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Tecnologia da Informação</fullName>
            </value>
            <value>
                <fullName>Outro</fullName>
            </value>
            <value>
                <fullName>TI</fullName>
            </value>
            <value>
                <fullName>Operacional</fullName>
                <isActive>false</isActive>
                <label>Operacional</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>