force-app/main/default/objects/Contact/fields/Assistente__c.field-meta.xml
<CustomField>
    <fullName>Assistente__c</fullName>
    <label>Assistente</label>
    <length>80</length>
    <type>Text</type>
</CustomField>