force-app/main/default/objects/Contact/fields/Birthday__c.field-meta.xml
<CustomField>
    <fullName>Birthday__c</fullName>
    <description>Dia/mês de aniversário</description>
    <inlineHelpText>Day/month of birth</inlineHelpText>
    <label>Birthday</label>
    <length>5</length>
    <type>Text</type>
</CustomField>