force-app/main/default/objects/Contact/fields/BypassValidationsFromBot__c.field-meta.xml
<CustomField>
    <fullName>BypassValidationsFromBot__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag tecnico para bypass de Validation Rules quando contato for criado/atualizado pelo Bot Will.</description>
    <label>Bypass Validations From Bot</label>
    <type>Checkbox</type>
</CustomField>