force-app/main/default/objects/Contact/fields/Celular_Secundario__c.field-meta.xml
<CustomField>
    <fullName>Celular_Secundario__c</fullName>
    <label>Celular Secundário</label>
    <type>Phone</type>
</CustomField>