force-app/main/default/objects/Contact/fields/Comercial_Responsavel_Agencia__c.field-meta.xml
<CustomField>
    <fullName>Comercial_Responsavel_Agencia__c</fullName>
    <label>Comercial Responsável</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Ana Clara Teixedo</fullName>
            </value>
            <value>
                <fullName>Camila Reis</fullName>
            </value>
            <value>
                <fullName>Carolina Andrade</fullName>
            </value>
            <value>
                <fullName>Diego Alvarez</fullName>
                <isActive>false</isActive>
                <label>Diego Alvarez</label>
            </value>
            <value>
                <fullName>Emanuel Andrade</fullName>
                <isActive>false</isActive>
                <label>Emanuel Andrade</label>
            </value>
            <value>
                <fullName>Fernanda Perazza</fullName>
                <isActive>false</isActive>
                <label>Fernanda Perazza</label>
            </value>
            <value>
                <fullName>George Tsamis</fullName>
            </value>
            <value>
                <fullName>Isabella Pereira</fullName>
            </value>
            <value>
                <fullName>Iully Ferreira</fullName>
            </value>
            <value>
                <fullName>Joanna Xiang</fullName>
            </value>
            <value>
                <fullName>Jorge Coutinho</fullName>
            </value>
            <value>
                <fullName>Livia Nobrega</fullName>
            </value>
            <value>
                <fullName>Lorena Gomes</fullName>
            </value>
            <value>
                <fullName>Luiz Maluza</fullName>
                <isActive>false</isActive>
                <label>Luiz Maluza</label>
            </value>
            <value>
                <fullName>Maria Eduarda Rodrigues</fullName>
            </value>
            <value>
                <fullName>Marina Braga</fullName>
            </value>
            <value>
                <fullName>Michel de Kok</fullName>
            </value>
            <value>
                <fullName>Natália Bley</fullName>
                <isActive>false</isActive>
                <label>Natália Bley</label>
            </value>
            <value>
                <fullName>Ramon Amaral</fullName>
            </value>
            <value>
                <fullName>Renan Queiroz</fullName>
            </value>
            <value>
                <fullName>Silvia Rosa</fullName>
                <isActive>false</isActive>
                <label>Silvia Rosa</label>
            </value>
            <value>
                <fullName>Stephanie Pires</fullName>
                <isActive>false</isActive>
                <label>Stephanie Pires</label>
            </value>
            <value>
                <fullName>Tássia Lima</fullName>
            </value>
            <value>
                <fullName>Thalita de Sá</fullName>
            </value>
            <value>
                <fullName>Thiago Pierry</fullName>
                <isActive>false</isActive>
                <label>Thiago Pierry</label>
            </value>
            <value>
                <fullName>Thomas Psarras</fullName>
            </value>
            <value>
                <fullName>Úrsula Schmitz</fullName>
            </value>
            <value>
                <fullName>Victor Barbosa</fullName>
                <isActive>false</isActive>
                <label>Victor Barbosa</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>