force-app/main/default/objects/Contact/fields/ContaRepresentadaAtual__c.field-meta.xml
<CustomField>
    <fullName>ContaRepresentadaAtual__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Permite ajuste operacional da empresa representada no contexto do atendimento.</description>
    <label>Conta Representada Atual</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contatos Representados</relationshipLabel>
    <relationshipName>ContatosRepresentados</relationshipName>
    <type>Lookup</type>
</CustomField>