force-app/main/default/objects/Contact/fields/Contato_Ativo__c.field-meta.xml
<CustomField>
    <fullName>Contato_Ativo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contato criado após o anterior ser inativado</description>
    <inlineHelpText>Contato criado após este ser inativado</inlineHelpText>
    <label>Contato Ativo</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contato Ativo</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>