force-app/main/default/objects/Contact/fields/Contato_Restrito__c.field-meta.xml
<CustomField>
    <fullName>Contato_Restrito__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contato Restrito</label>
    <type>Checkbox</type>
</CustomField>