force-app/main/default/objects/Contact/fields/Divisao__c.field-meta.xml
<CustomField>
    <fullName>Divisao__c</fullName>
    <label>Divisão</label>
    <type>TextArea</type>
</CustomField>