force-app/main/default/objects/Contact/fields/Email_Secundario__c.field-meta.xml
<CustomField>
    <fullName>Email_Secundario__c</fullName>
    <label>Email Secundário</label>
    <type>Email</type>
</CustomField>