force-app/main/default/objects/Contact/fields/Genero__c.field-meta.xml
<CustomField>
    <fullName>Genero__c</fullName>
    <label>Gênero</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Masculino</fullName>
            </value>
            <value>
                <fullName>Feminino</fullName>
            </value>
            <value>
                <fullName>Não especificado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>