force-app/main/default/objects/Contact/fields/Id_Zendesk_User__c.field-meta.xml
<CustomField>
    <fullName>Id_Zendesk_User__c</fullName>
    <label>Id Zendesk User</label>
    <length>20</length>
    <type>Text</type>
</CustomField>