force-app/main/default/objects/Contact/fields/Idioma__c.field-meta.xml
<CustomField>
    <fullName>Idioma__c</fullName>
    <description>Idioma preferencial do contato usado pelo Bot Will e pelos fluxos de pesquisa de Atendimento.</description>
    <label>Idioma</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>pt_BR</fullName>
            </value>
            <value>
                <fullName>en_US</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>