force-app/main/default/objects/Contact/fields/IdiomaOld__c.field-meta.xml
<CustomField>
    <fullName>IdiomaOld__c</fullName>
    <label>Idioma</label>
    <length>80</length>
    <type>Text</type>
</CustomField>