force-app/main/default/objects/Contact/fields/Momento_Atualizou_Status__c.field-meta.xml
<CustomField>
    <fullName>Momento_Atualizou_Status__c</fullName>
    <label>Momento Atualizou Status</label>
    <type>DateTime</type>
</CustomField>