force-app/main/default/objects/Contact/fields/Negocios_Habilitados_para_Campanhas__c.field-meta.xml
<CustomField>
    <fullName>Negocios_Habilitados_para_Campanhas__c</fullName>
    <label>Negócios Habilitados para Campanhas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agência Marítima</fullName>
            </value>
            <value>
                <fullName>Brasco</fullName>
            </value>
            <value>
                <fullName>Corporativo</fullName>
            </value>
            <value>
                <fullName>Estaleiros</fullName>
            </value>
            <value>
                <fullName>Logística</fullName>
            </value>
            <value>
                <fullName>Rebocadores</fullName>
            </value>
            <value>
                <fullName>Tecon Salvador</fullName>
            </value>
            <value>
                <fullName>Tecon Rio Grande</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>