force-app/main/default/objects/Contact/fields/Nivel_Cargo__c.field-meta.xml
<CustomField>
    <fullName>Nivel_Cargo__c</fullName>
    <label>Nível do Cargo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Analista</fullName>
            </value>
            <value>
                <fullName>Assistente</fullName>
            </value>
            <value>
                <fullName>Coordenador</fullName>
            </value>
            <value>
                <fullName>Diretor</fullName>
            </value>
            <value>
                <fullName>Dono / Sócio</fullName>
            </value>
            <value>
                <fullName>Gerente</fullName>
            </value>
            <value>
                <fullName>Membro do Conselho</fullName>
            </value>
            <value>
                <fullName>Presidente</fullName>
            </value>
            <value>
                <fullName>Vice-presidente / Superintendente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>