force-app/main/default/objects/Contact/fields/Nome_Preferido__c.field-meta.xml
<CustomField>
    <fullName>Nome_Preferido__c</fullName>
    <label>Nome Preferido</label>
    <length>80</length>
    <type>Text</type>
</CustomField>