force-app/main/default/objects/Contact/fields/Papel_Decis_rio__c.field-meta.xml
<CustomField>
    <fullName>Papel_Decis_rio__c</fullName>
    <label>Papel Decisório</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Peão</fullName>
            </value>
            <value>
                <fullName>Cavalo</fullName>
            </value>
            <value>
                <fullName>Bispo</fullName>
            </value>
            <value>
                <fullName>Rei</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>