force-app/main/default/objects/Contact/fields/PermitePesquisaSatisfacao__c.field-meta.xml
<CustomField>
    <fullName>PermitePesquisaSatisfacao__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controla elegibilidade do contato para comunica es de pesquisa.</description>
    <label>Permite Pesquisa de Satisfação</label>
    <type>Checkbox</type>
</CustomField>