force-app/main/default/objects/Contact/fields/Person_in_Charge__c.field-meta.xml
<CustomField>
    <fullName>Person_in_Charge__c</fullName>
    <label>Person in Charge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>