force-app/main/default/objects/Contact/fields/Rebocadores__c.field-meta.xml
<CustomField>
    <fullName>Rebocadores__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo criado para filtrar contatos relevantes para UN Rebocadores</description>
    <label>Rebocadores?</label>
    <type>Checkbox</type>
</CustomField>