force-app/main/default/objects/Contact/fields/Segmentacao_Especifica_Agencia__c.field-meta.xml
<CustomField>
    <fullName>Segmentacao_Especifica_Agencia__c</fullName>
    <label>Segmentação Específica Agência</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aço</fullName>
            </value>
            <value>
                <fullName>Açúcar</fullName>
            </value>
            <value>
                <fullName>Afretador</fullName>
            </value>
            <value>
                <fullName>Armador</fullName>
            </value>
            <value>
                <fullName>Alumínio</fullName>
            </value>
            <value>
                <fullName>Carga de Projeto</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Carga Geral</fullName>
            </value>
            <value>
                <fullName>Carga Viva</fullName>
            </value>
            <value>
                <fullName>Carvão</fullName>
            </value>
            <value>
                <fullName>Coque</fullName>
            </value>
            <value>
                <fullName>Celulose</fullName>
            </value>
            <value>
                <fullName>Cimento</fullName>
            </value>
            <value>
                <fullName>Fertilizante</fullName>
            </value>
            <value>
                <fullName>Grãos</fullName>
            </value>
            <value>
                <fullName>Líquido</fullName>
            </value>
            <value>
                <fullName>Madeira</fullName>
            </value>
            <value>
                <fullName>Minério</fullName>
            </value>
            <value>
                <fullName>Óleo &amp; Gás</fullName>
            </value>
            <value>
                <fullName>Químicos</fullName>
            </value>
            <value>
                <fullName>Ro-Ro</fullName>
            </value>
            <value>
                <fullName>Sal</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>