force-app/main/default/objects/Contact/fields/Telefone_Assistente__c.field-meta.xml
<CustomField>
    <fullName>Telefone_Assistente__c</fullName>
    <label>Telefone Assistente</label>
    <type>Phone</type>
</CustomField>