force-app/main/default/objects/Contact/fields/Telefone_Secundario__c.field-meta.xml
<CustomField>
    <fullName>Telefone_Secundario__c</fullName>
    <label>Telefone Secundário</label>
    <type>Phone</type>
</CustomField>