force-app/main/default/objects/Contact/fields/Time_Futebol__c.field-meta.xml
<CustomField>
    <fullName>Time_Futebol__c</fullName>
    <label>Time de Futebol</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ABC</fullName>
            </value>
            <value>
                <fullName>América-MG</fullName>
            </value>
            <value>
                <fullName>América-RN</fullName>
            </value>
            <value>
                <fullName>Atlético-GO</fullName>
            </value>
            <value>
                <fullName>Atlético-MG</fullName>
            </value>
            <value>
                <fullName>Atlético-PR</fullName>
            </value>
            <value>
                <fullName>Avaí</fullName>
            </value>
            <value>
                <fullName>Bahia</fullName>
            </value>
            <value>
                <fullName>Boa Esporte</fullName>
            </value>
            <value>
                <fullName>Botafogo</fullName>
            </value>
            <value>
                <fullName>Bragantino</fullName>
            </value>
            <value>
                <fullName>Ceará</fullName>
            </value>
            <value>
                <fullName>Chapecoense</fullName>
            </value>
            <value>
                <fullName>Corinthians</fullName>
            </value>
            <value>
                <fullName>Coritiba</fullName>
            </value>
            <value>
                <fullName>CRB</fullName>
            </value>
            <value>
                <fullName>Criciúma</fullName>
            </value>
            <value>
                <fullName>Cruzeiro</fullName>
            </value>
            <value>
                <fullName>Figueirense</fullName>
            </value>
            <value>
                <fullName>Flamengo</fullName>
            </value>
            <value>
                <fullName>Fluminense</fullName>
            </value>
            <value>
                <fullName>Fortaleza</fullName>
            </value>
            <value>
                <fullName>Goiás</fullName>
            </value>
            <value>
                <fullName>Grêmio</fullName>
                <label>GRÊMIO</label>
            </value>
            <value>
                <fullName>Icasa</fullName>
            </value>
            <value>
                <fullName>Internacional</fullName>
            </value>
            <value>
                <fullName>Joinville</fullName>
            </value>
            <value>
                <fullName>Luverdense</fullName>
            </value>
            <value>
                <fullName>Macaé</fullName>
            </value>
            <value>
                <fullName>Madureira</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>