force-app/main/default/objects/Contact/fields/Tipo_de_Cliente_TCRG__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Cliente_TCRG__c</fullName>
    <label>Tipo de Cliente</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Armador</fullName>
            </value>
            <value>
                <fullName>Cabotagem</fullName>
            </value>
            <value>
                <fullName>Exportador</fullName>
            </value>
            <value>
                <fullName>Importador</fullName>
            </value>
            <value>
                <fullName>Parceiro Estratégico</fullName>
            </value>
            <value>
                <fullName>Transportadora</fullName>
            </value>
            <value>
                <fullName>Despachante</fullName>
            </value>
            <value>
                <fullName>Cliente Reefer</fullName>
            </value>
            <value>
                <fullName>Cliente Armexp</fullName>
            </value>
            <value>
                <fullName>Cliente Armimp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>