force-app/main/default/objects/Contact/fields/Usuario_Atualizou_Status__c.field-meta.xml
<CustomField>
    <fullName>Usuario_Atualizou_Status__c</fullName>
    <label>Usuário Atualizou Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>