force-app/main/default/objects/Contact/recordTypes/Startup.recordType-meta.xml
<RecordType>
    <fullName>Startup</fullName>
    <active>true</active>
    <label>Startup</label>
</RecordType>