force-app/main/default/objects/Contact/validationRules/Campo_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Campo_Status</fullName>
    <active>false</active>
    <description>Somente usuário PowerUser, Gestor ou Administrador possuem permissão de criar/alterar Contato com status diferente de Nova.</description>
    <errorConditionFormula>AND(NOT(BypassValidationsFromBot__c),
IF(
$Profile.Name == &quot;Vendedor&quot; &amp;&amp; ((ISCHANGED(Status__c))||(ISNEW()&amp;&amp; TEXT(Status__c) != &quot;Novo&quot;)), TRUE , FALSE
)
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Somente usuário PowerUser, Gestor ou Administrador possuem permissão de criar/alterar Contato com status diferente de Nova.</errorMessage>
</ValidationRule>