force-app/main/default/objects/Contact/validationRules/Endereco_preenchido_se_for_TCRG.validationRule-meta.xml
<ValidationRule>
    <fullName>Endereco_preenchido_se_for_TCRG</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT(BypassValidationsFromBot__c),
AND(CONTAINS($UserRole.Name, &quot;Rio Grande&quot;), AND(ISBLANK( MailingStreet), ISBLANK(MailingPostalCode)))
)</errorConditionFormula>
    <errorMessage>Favor preencha o endereço.</errorMessage>
</ValidationRule>