force-app/main/default/objects/Contact/validationRules/Mailing_Address_Required_Rebocadores.validationRule-meta.xml
<ValidationRule>
    <fullName>Mailing_Address_Required_Rebocadores</fullName>
    <active>true</active>
    <description>Campo Endereço obrigatório para contatos criados por Rebocadores.</description>
    <errorConditionFormula>AND(NOT(BypassValidationsFromBot__c),
ISBLANK( MailingCity ) &amp;&amp; ISBLANK( MailingCountry ) &amp;&amp; ISBLANK( MailingState ) &amp;&amp; ISBLANK( MailingStreet ) &amp;&amp; ISPICKVAL( Owner.Area_Negocio__c , &quot;Rebocadores&quot;)
)</errorConditionFormula>
    <errorDisplayField>MailingStreet</errorDisplayField>
    <errorMessage>O preenchimento das informações do endereço é obrigatório.</errorMessage>
</ValidationRule>