force-app/main/default/objects/Contact/validationRules/Primeiro_Nome_Obrigatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>Primeiro_Nome_Obrigatorio</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT(BypassValidationsFromBot__c),
ISBLANK(FirstName)
)</errorConditionFormula>
    <errorMessage>Os seguintes campos obrigatórios devem ser preenchidos: Primeiro Nome</errorMessage>
</ValidationRule>