force-app/main/default/objects/Contact/validationRules/Telefone_ou_Celular_Preenchido.validationRule-meta.xml
<ValidationRule>
    <fullName>Telefone_ou_Celular_Preenchido</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(BypassValidationsFromBot__c),
ISBLANK( Phone ) &amp;&amp; ISBLANK( MobilePhone )
)</errorConditionFormula>
    <errorMessage>Um dos campos &quot;Telefone&quot; ou &quot;Celular&quot; deverá ser preenchido obrigatoriamente.</errorMessage>
</ValidationRule>